--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿annotated-types==0.7.0
+annotated-types==0.7.0
 anyio==4.11.0
 blinker==1.9.0
 cachetools==6.2.1
@@ -11,7 +11,8 @@ cryptography==46.0.3
 deprecation==2.1.0
 Flask==3.1.2
 google-auth==2.43.0
-google-genai==1.49.0
+google-generativeai==0.8.3
+gunicorn==21.2.0
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -50,4 +51,3 @@ urllib3==2.5.0
 websockets==15.0.1
 Werkzeug==3.1.3
 yarl==1.22.0
-gunicorn==21.2.0
