--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,7 @@ cryptography==46.0.3
 deprecation==2.1.0
 Flask==3.1.2
 google-auth==2.43.0
-google-generativeai==0.8.3
-gunicorn==21.2.0
+google-genai==1.49.0
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -51,3 +50,4 @@ urllib3==2.5.0
 websockets==15.0.1
 Werkzeug==3.1.3
 yarl==1.22.0
+gunicorn==20.1.0
